tests/cases/conformance/types/primitives/string/stringPropertyAccessWithError.ts
var x = '';
var d = x['charAt']('invalid'); // error